--- a/html/ALCLEARWaschhandschuh.html
+++ b/html/ALCLEARWaschhandschuh.html
@@ -17,50 +17,63 @@
 
 <body>
   <div class="pointer">
-    <div class="logo" onclick="window.location.href='start.html'">
-      <img src="../img/DeluxeCar.png" />
+    <div id="Verkauf1_Logo" class="logo" onclick="window.location.href='start.html'">
+      <!--<img src="../img/DeluxeCar.png" /> -->
     </div>
   </div>
   <nav>
     <ul>
       <li><a class="navi" href="start.html">Startseite</a></li>
-      <li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-      <li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-      <li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
+      <li><a id="Verkauf1_Handwäsche" class="navi" href="Verkauf1.html">
+          <!--Handwäsche--></a></li>
+      <li id="Verkauf1_Polituren_und_Poliermaschinen">
+        <!--<a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a>-->
+      </li>
+      <li id="Verkauf1_Versiegelungen_und_Wachse">
+        <!--<a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a>-->
+      </li>
       <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
     </ul>
   </nav>
-  
+
   <div class="currentposition">
-  <h7> ALCLEAR Waschhandschuh </h7>
+    <h7 id="ALCLEARWaschhandschuh_Name">
+      <!--ALCLEAR Waschhandschuh-->
+    </h7>
   </div>
-<div class="container wasdienedgeschafthaben">
+  <div class="container wasdienedgeschafthaben">
     <div class="row">
-  <table>
+      <table>
 
 
-    <tr>
-      <td>
-        <div class="product-grid2">
-          <div class="product-image2">
-          <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
+        <tr>
+          <td>
+            <div class="product-grid2">
+              <div id="ALCLEARWaschhandschuh_Pictures" class="product-image2">
+                <!--<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
           <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
-        </div>
-        </div>
-        </td>
-      <td class="großeschrift">Preis: 12,99 € inkl. MwSt. <br>
+        -->
+              </div>
+            </div>
+          </td>
+          <td id="ALCLEARWaschhandschuh_Details" class="großeschrift">
+            <!--Preis: 12,99 € inkl. MwSt. <br>
           Status: Auf Lager<br>
           Versandkostenfrei<br>
-          Lieferzeit: 1-3 Werktage</td>
-      <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den </br>Warenkorb</button></td>
-  
-    </tr>
-  </table>
-  
-  
-  <div class="container wasdienedgeschafthaben">           
-	<h8><b>Artikelbeschreibung:</b></h8><br><br>
-	Der ALCLEAR Waschhandschuh für die schonende Handwäsche
+          Lieferzeit: 1-3 Werktage
+        -->
+          </td>
+          <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den
+              </br>Warenkorb</button></td>
+
+        </tr>
+      </table>
+
+
+      <div class="container wasdienedgeschafthaben">
+        <h8><b>Artikelbeschreibung:</b></h8><br><br>
+        <div id="ALCLEARWaschhandschuh_beschreibunggross">
+          <!--	Der ALCLEAR Waschhandschuh für die schonende Handwäsche
 
 	Wer sein Auto liebt, wäscht von Hand und mit 2 Eimern. Doch nicht mit irgendeinem Lappen,
 	sondern vorzugsweise mit einem hochwertigen Waschhandschuh wie dem ALCLEAR Waschhandschuh.
@@ -73,20 +86,22 @@
 	auf und gleiten hervorragend über alle gängigen Lacke. Nun brauchst du also nur noch ein geeignetes Auto-Shampoo aus unserem Deluxe Car Care Onlineshop.
 	Hilft bei der Schaumproduktion und ist waschbar.
     <br>
-	Dank der dicht gewebten Mikrofasern mit einem Flächengewicht von 500 GSM ist der 
+	Dank der dicht gewebten Mikrofasern mit einem Flächengewicht von 500 GSM ist der
 	ALCLEAR Waschhandschuh extrem schonend zum Lack. Darüber hinaus hilft er dir, massig Schaum für
 	noch bessere Gleiteigenschaften und Schmutzlösekraft zu produzieren. Die enge Handgelenkmanschette
 	des ALCLEAR Waschhandschuh stellt während der Handwäsche sicher, dass der Handschuh stets fest sitzt und
-  du ihn dadurch perfekt kontrollieren kannst.<br> 
-  Natürlich ist auf der Manschette das bekannte ALCLEAR Logo angebracht. 
+  du ihn dadurch perfekt kontrollieren kannst.<br>
+  Natürlich ist auf der Manschette das bekannte ALCLEAR Logo angebracht.
   So sieht man auf den ersten Blick, dass du bei der
 	Autopflege auf Qualität setzt. Den ALCLEAR Waschhandschuh aus Mikrofaser kannst du in
 	der Maschine waschen. Verwende hierfür ein Mikrofaserwaschmittel aus unserem Sortiment und verzichte
 	stets auf Weichspüler. Auch auf die Trocknung im Wäschetrockner solltest du verzichten,
-	um die Funktionalität des Handschuhs dauerhaft zu erhalten.
-  </div> 
- 
-  </div>
+  um die Funktionalität des Handschuhs dauerhaft zu erhalten.
+-->
+        </div>
+      </div>
+
+    </div>
   </div>
   <!-- footer -->
   <div class="footer-basic">
@@ -97,3 +112,99 @@
 </body>
 
 </html>
+
+
+<!--------------------------------------------------------------------------------------------------------------------->
+
+<script>
+  $(document).ready(function() {
+
+    //AJAX for the logo
+    //-------------------------------------------------------------------------------------------------------------------------
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/19",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '<img src="' + response.daten.bilder[0].bildpfad + '">';
+      $('#Verkauf1_Logo').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+    //AJAX for the NAVBAR
+    //---------------------------------------------------------------------------------------------------------------------------
+    $.ajax({
+      url: "http://localhost:8000/api/produktkategorie/gib/1",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = response.daten.bezeichnung;
+      $('#Verkauf1_Handwäsche').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+    //##########################################################################################
+    $.ajax({
+      url: "http://localhost:8000/api/produktkategorie/gib/2",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '<a class="navi" href="Verkauf2.html">' + response.daten.bezeichnung + '</a>';
+      $('#Verkauf1_Polituren_und_Poliermaschinen').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+    //##########################################################################################
+    $.ajax({
+      url: "http://localhost:8000/api/produktkategorie/gib/3",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '<a class="navi" href="Verkauf3.html">' + response.daten.bezeichnung + '</a>';
+      $('#Verkauf1_Versiegelungen_und_Wachse').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+    //AJAX for the Productinformation
+    //----------------------------------------------------------------------------------------------------------------------------------
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/1",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var name = response.daten.name;
+      var pics = '<img class="pic-1" src="' + response.daten.bilder[0].bildpfad + '"><img class="pic-2" src="' + response.daten.bilder[1].bildpfad + '">';
+
+      var aufLager = response.daten.auflager;
+      if (aufLager) {
+        aufLager = "Auf Lager";
+      } else {
+        aufLager = "Nicht auf Lager"
+      }
+      var details = 'Preis: ' + response.daten.bruttopreis.toString().replace(".", ",") + ' € inkl. MwSt.<br>Status: ' + aufLager + '<br>Versandkostenfrei<br>Lieferzeit: 1-3 Werktage';
+
+      var beschreibung = response.daten.beschreibunggross;
+
+      $('#ALCLEARWaschhandschuh_Name').html(name);
+      $('#ALCLEARWaschhandschuh_Pictures').html(pics);
+      $('#ALCLEARWaschhandschuh_Details').html(details);
+      $('#ALCLEARWaschhandschuh_beschreibunggross').html(beschreibung);
+
+
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+  });
+</script>
