--- a/html/EimerGritGuard.html
+++ b/html/EimerGritGuard.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="Stylesheet.css">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>2x Eimer mit Grit Guard</title>
+  <title>EimerGritGuard</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/Stylesheet.css">
@@ -17,67 +17,48 @@
 
 <body>
   <div class="pointer">
-    <div class="logo" onclick="window.location.href='start.html'">
-      <img src="../img/DeluxeCar.png" />
+    <div id="Verkauf1_Logo" class="logo" onclick="window.location.href='start.html'">
     </div>
   </div>
   <nav>
     <ul>
       <li><a class="navi" href="start.html">Startseite</a></li>
-      <li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-      <li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-      <li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
+      <li><a id="Verkauf1_Handwäsche" class="navi" href="Verkauf1.html">
+        </a></li>
+      <li id="Verkauf1_Polituren_und_Poliermaschinen">
+      </li>
+      <li id="Verkauf1_Versiegelungen_und_Wachse">
+      </li>
       <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
     </ul>
   </nav>
-  
   <div class="currentposition">
-  <h7> 2x Eimer mit Grit Guard </h7>
+    <h7 id="EimerGritGuard_Name">
+    </h7>
   </div>
-<div class="container wasdienedgeschafthaben">
+  <div class="container wasdienedgeschafthaben">
     <div class="row">
-  <table>
-
-
-    <tr>
-      <td>
-        <div class="product-grid2">
-          <div class="product-image2">
-          <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51yi-JJt6PL._AC_SY355_.jpg">
-          <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61mrtbNymWL._AC_SY450_.jpg">
+      <table>
+        <tr>
+          <td>
+            <div class="product-grid2">
+              <div id="EimerGritGuard_Pictures" class="product-image2">
+              </div>
+            </div>
+          </td>
+          <td id="EimerGritGuard_Details" class="großeschrift">
+          </td>
+          <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den
+              </br>Warenkorb</button></td>
+        </tr>
+      </table>
+      <div class="container wasdienedgeschafthaben">
+        <h8><b>Artikelbeschreibung:</b></h8><br><br>
+        <div id="EimerGritGuard_beschreibunggross">
         </div>
-        </div>
-        </td>
-      <td class="großeschrift">Preis: 54,99 € inkl. MwSt. <br>
-          Status: Auf Lager<br>
-          Versandkostenfrei<br>
-          Lieferzeit: 1-3 Werktage</td>
-      <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den </br>Warenkorb</button></td>
-  
-    </tr>
-  </table>
-  
-  
-  <div class="container wasdienedgeschafthaben">           
-	<h8><b>Artikelbeschreibung:</b></h8><br><br>
-	
+      </div>
 
-Der große Meguiars Grit Guard Wascheimer mit 19 Liter Fassungsvermögen ist Ihr praktischer Helfer für eine professionelle Autowäsche.
-
-Der große Bodendurchmesser des Wascheimers erlaubt den optimalen Einsatz des Grit Guards zur Vermeidung der Aufnahme von Schmutzpartikeln durch den Waschschwamm bzw. Waschhandschuh.
-
-Selbstverständlich ist der Meguiars Grit Guard Wascheimer kompatibel mit dem Gamma Seal Deckel, mit dem ein sicherer Transport von Waschwasser möglich ist.
-
-Die leuchtende Gelbfarbe erleichtert die Sichtbarkeit für Schmutz und ermöglicht eine effektivere Reinigung nach der Autowäsche.
-
-Der schöne, große Logoprint sorgt für eine unverkennbare Verdedelung des Wascheimers und zieht garantiert interessierte Blicke auf dem Wachplatz an.
-
-Meguiars Grit Guard Eimereinsatz wirkt wie ein Sieb, die potenziellen Kratzpartikel sinken in den unteren Bereich des Wascheimers und werden dort effektiv vom Autowasch-Schwamm bzw. Waschhanschuh ferngehalten und reduziert somit drastisch die Kratzer.
-
-Selbstverständlich ist der Wascheimer kompatibel mit dem Gamma Seal Deckel, mit dem ein sicherer Transport von Waschwasser möglich ist.
-  </div> 
- 
-  </div>
+    </div>
   </div>
   <!-- footer -->
   <div class="footer-basic">
@@ -88,3 +69,99 @@ Selbstverständlich ist der Wascheimer kompatibel mit dem Gamma Seal Deckel, mit
 </body>
 
 </html>
+
+
+<!--------------------------------------------------------------------------------------------------------------------->
+
+<script>
+  $(document).ready(function() {
+
+    //AJAX for the logo
+    //-------------------------------------------------------------------------------------------------------------------------
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/19",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '<img src="' + response.daten.bilder[0].bildpfad + '">';
+      $('#Verkauf1_Logo').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+    //AJAX for the NAVBAR
+    //---------------------------------------------------------------------------------------------------------------------------
+    $.ajax({
+      url: "http://localhost:8000/api/produktkategorie/gib/1",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = response.daten.bezeichnung;
+      $('#Verkauf1_Handwäsche').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+    //##########################################################################################
+    $.ajax({
+      url: "http://localhost:8000/api/produktkategorie/gib/2",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '<a class="navi" href="Verkauf2.html">' + response.daten.bezeichnung + '</a>';
+      $('#Verkauf1_Polituren_und_Poliermaschinen').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+    //##########################################################################################
+    $.ajax({
+      url: "http://localhost:8000/api/produktkategorie/gib/3",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '<a class="navi" href="Verkauf3.html">' + response.daten.bezeichnung + '</a>';
+      $('#Verkauf1_Versiegelungen_und_Wachse').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+    //AJAX for the Productinformation
+    //----------------------------------------------------------------------------------------------------------------------------------
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/12",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var name = response.daten.name;
+      var pics = '<img class="pic-1" src="' + response.daten.bilder[0].bildpfad + '"><img class="pic-2" src="' + response.daten.bilder[1].bildpfad + '">';
+
+      var aufLager = response.daten.auflager;
+      if (aufLager) {
+        aufLager = "Auf Lager";
+      } else {
+        aufLager = "Nicht auf Lager"
+      }
+      var details = 'Preis: ' + response.daten.bruttopreis.toString().replace(".", ",") + ' € inkl. MwSt.<br>Status: ' + aufLager + '<br>Versandkostenfrei<br>Lieferzeit: 1-3 Werktage';
+
+      var beschreibung = response.daten.beschreibunggross;
+
+      $('#EimerGritGuard_Name').html(name);
+      $('#EimerGritGuard_Pictures').html(pics);
+      $('#EimerGritGuard_Details').html(details);
+      $('#EimerGritGuard_beschreibunggross').html(beschreibung);
+
+
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+  });
+</script>
