--- a/html/GLORIATopFoam.html
+++ b/html/GLORIATopFoam.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="Stylesheet.css">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GLORIA Top Foam</title>
+  <title>GLORIATopFoam</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/Stylesheet.css">
@@ -17,62 +17,48 @@
 
 <body>
   <div class="pointer">
-    <div class="logo" onclick="window.location.href='start.html'">
-      <img src="../img/DeluxeCar.png" />
+    <div id="Verkauf1_Logo" class="logo" onclick="window.location.href='start.html'">
     </div>
   </div>
   <nav>
     <ul>
       <li><a class="navi" href="start.html">Startseite</a></li>
-      <li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-      <li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-      <li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
+      <li><a id="Verkauf1_Handwäsche" class="navi" href="Verkauf1.html">
+        </a></li>
+      <li id="Verkauf1_Polituren_und_Poliermaschinen">
+      </li>
+      <li id="Verkauf1_Versiegelungen_und_Wachse">
+      </li>
       <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
     </ul>
   </nav>
-  
   <div class="currentposition">
-  <h7> GLORIA Top Foam </h7>
+    <h7 id="GLORIATopFoam_Name">
+    </h7>
   </div>
-<div class="container wasdienedgeschafthaben">
+  <div class="container wasdienedgeschafthaben">
     <div class="row">
-  <table>
-
-
-    <tr>
-      <td>
-        <div class="product-grid2">
-          <div class="product-image2">
-          <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
-          <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
+      <table>
+        <tr>
+          <td>
+            <div class="product-grid2">
+              <div id="GLORIATopFoam_Pictures" class="product-image2">
+              </div>
+            </div>
+          </td>
+          <td id="GLORIATopFoam_Details" class="großeschrift">
+          </td>
+          <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den
+              </br>Warenkorb</button></td>
+        </tr>
+      </table>
+      <div class="container wasdienedgeschafthaben">
+        <h8><b>Artikelbeschreibung:</b></h8><br><br>
+        <div id="GLORIATopFoam_beschreibunggross">
         </div>
-        </div>
-        </td>
-      <td class="großeschrift">Preis: 14,99 € inkl. MwSt. <br>
-          Status: Auf Lager<br>
-          Versandkostenfrei<br>
-          Lieferzeit: 1-3 Werktage</td>
-      <td class="großeschrift">Stückzahl: <br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /> <br><br><button id="addProduct" onclick="Input1()">In den </br>Warenkorb</button></td>
-  
-    </tr>
-  </table>
-  
-  
-  <div class="container wasdienedgeschafthaben">           
-	<h8><b>Artikelbeschreibung:</b></h8><br><br>
-	
+      </div>
 
-Gloria Top Foam ist ein hochwirksames Snow Foam Spezial-Shampoo mit extra hohem Schäumungsgrad, welches Schmutz und Insektenreste problemlos beseitigt und ihr Fahrzeug in frischem Glanz erstrahlen lässt.
-
-Gloria Top Foam bildet einen gleichmäßigen, sehr gut benetzenden Schaumteppich aus, welcher lange an der Oberfläche haftet und so eine lange Einwirkzeit ermöglicht. Durch die pH-neutrale Formulierung greift Top Foam gewachste oder versiegelte Oberflächen nicht an.
-
-Gloria Top Foam ist für die Reinigung sämtlicher Lack-, Kunststoff- und Glasflächen am Fahrzeug geeignet und besitzt einen frischen Zitrusduft.
-
-Gloria Top Foam ist ein ideales Mittel für den Einsatz mit Schaumsprühgeräten, Schaumkanonen (Foam Lance) aber auch als Shampoo zur manuellen Fahrzeugwäsche.
-
-  </div> 
- 
-  </div>
+    </div>
   </div>
   <!-- footer -->
   <div class="footer-basic">
@@ -83,3 +69,99 @@ Gloria Top Foam ist ein ideales Mittel für den Einsatz mit Schaumsprühgeräten
 </body>
 
 </html>
+
+
+<!--------------------------------------------------------------------------------------------------------------------->
+
+<script>
+  $(document).ready(function() {
+
+    //AJAX for the logo
+    //-------------------------------------------------------------------------------------------------------------------------
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/19",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '<img src="' + response.daten.bilder[0].bildpfad + '">';
+      $('#Verkauf1_Logo').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+    //AJAX for the NAVBAR
+    //---------------------------------------------------------------------------------------------------------------------------
+    $.ajax({
+      url: "http://localhost:8000/api/produktkategorie/gib/1",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = response.daten.bezeichnung;
+      $('#Verkauf1_Handwäsche').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+    //##########################################################################################
+    $.ajax({
+      url: "http://localhost:8000/api/produktkategorie/gib/2",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '<a class="navi" href="Verkauf2.html">' + response.daten.bezeichnung + '</a>';
+      $('#Verkauf1_Polituren_und_Poliermaschinen').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+    //##########################################################################################
+    $.ajax({
+      url: "http://localhost:8000/api/produktkategorie/gib/3",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var tmp = '<a class="navi" href="Verkauf3.html">' + response.daten.bezeichnung + '</a>';
+      $('#Verkauf1_Versiegelungen_und_Wachse').html(tmp);
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+    //AJAX for the Productinformation
+    //----------------------------------------------------------------------------------------------------------------------------------
+    $.ajax({
+      url: "http://localhost:8000/api/produkt/gib/10",
+      method: "get",
+      dataType: "json"
+    }).done(function(response) {
+      var name = response.daten.name;
+      var pics = '<img class="pic-1" src="' + response.daten.bilder[0].bildpfad + '"><img class="pic-2" src="' + response.daten.bilder[1].bildpfad + '">';
+
+      var aufLager = response.daten.auflager;
+      if (aufLager) {
+        aufLager = "Auf Lager";
+      } else {
+        aufLager = "Nicht auf Lager"
+      }
+      var details = 'Preis: ' + response.daten.bruttopreis.toString().replace(".", ",") + ' € inkl. MwSt.<br>Status: ' + aufLager + '<br>Versandkostenfrei<br>Lieferzeit: 1-3 Werktage';
+
+      var beschreibung = response.daten.beschreibunggross;
+
+      $('#GLORIATopFoam_Name').html(name);
+      $('#GLORIATopFoam_Pictures').html(pics);
+      $('#GLORIATopFoam_Details').html(details);
+      $('#GLORIATopFoam_beschreibunggross').html(beschreibung);
+
+
+
+    }).fail(function(jqXHR, statusText, error) {
+      console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+      $("#output").html("Ein Fehler ist aufgetreten");
+    });
+
+  });
+</script>
