--- a/html/start.html
+++ b/html/start.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Startseite</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Startseite</title>
 
 	<link rel="stylesheet" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/Stylesheet.css">
@@ -12,45 +13,40 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </head>
-	<body>
-		<div class="pointer">
-			<div class="logo" onclick="window.location.href='start.html'">
-	  		<img src="../img/DeluxeCar.png"/>
+
+<body>
+	<div class="pointer">
+		<div class="logo" onclick="window.location.href='start.html'">
+			<img src="../img/DeluxeCar.png" />
+		</div>
+	</div>
+	<nav id="Kategorieliste">
+		<!--Navbar -->
+	</nav>
+
+
+	<!-- Tipps zu -->
+	<section class="tippszu">
+		<div class="bildle first">
+			<div class="ueber1">
+				<h1><a class="one" href="Verkauf1.html">Handwäsche</a></h1>
 			</div>
 		</div>
-		<nav>
-			<ul>
-				<li><a class="navi" href="start.html">Startseite</a></li>
-				<li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-				<li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-				<li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
-				<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
-			</ul>
-		</nav>
-
-
-		<!-- Tipps zu -->
-		<section class="tippszu">
-			<div class="bildle first">
-				<div class="ueber1">
-					<h1><a class ="one" href="Verkauf1.html">Handwäsche</a></h1>
-				</div>
+		<div class="bildle">
+			<div class="ueber1">
+				<h1><a class="one" href="Verkauf2.html">Polituren und Poliermaschinen</a></h1>
 			</div>
-			<div class="bildle">
-				<div class="ueber1">
-					<h1><a class="one" href="Verkauf2.html">Polituren und Poliermaschinen</a></h1>
-				</div>
-			</div>
-			<div class="bildle">
-				<div class="ueber1">
-					<h1><a class ="one" href="Verkauf3.html">Versiegelungen und Wachse</a></h1>
+		</div>
+		<div class="bildle">
+			<div class="ueber1">
+				<h1><a class="one" href="Verkauf3.html">Versiegelungen und Wachse</a></h1>
 
-				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<div id="stleft">
-			<p>
+	<div id="stleft">
+		<p>
 			Autopflege hat sich seit ein paar Jahren stark in Europa und speziell Deutschland etabliert
 			und ist keine Nische mehr. So waschen Autoliebhaber von jedem Alter gerne und auf hohem
 			Entusiasten-Niveau ihre Fahrzeuge und das mit einer Hingabe die seinesgleichen sucht. Das perfekte
@@ -59,42 +55,80 @@
 			einem schönen Sommerabend in der Waschbox mit ein paar Freunden unsere Autos zu waschen und die Zeit
 			draußen in der Natur zu genießen. Danach kann natürlich noch auf ein schönes Autotreffen gefahren
 			werden, wo wir unsere Leidenschaft mit anderen Autoverrückten teilen.
-			</p>
-		</div>
+		</p>
+	</div>
 
-				<!-- Start about Area -->
-		<section class="about-area section-gap">
-			<div class="container">
-				<div class="row align-items-center justify-content-center">
+	<!-- Start about Area -->
+	<section class="about-area section-gap">
+		<div class="container">
+			<div class="row align-items-center justify-content-center">
 
-					<div class="col-lg-7 col-md-12 about-left">
-						<img class="img-fluid" src="../img/startpic.png" alt="">
+				<div class="col-lg-7 col-md-12 about-left">
+					<img class="img-fluid" src="../img/startpic.png" alt="">
+				</div>
+				<div class="col-lg-5 col-md-12 about-right">
+					<div class="section-title text-left">
+						<h2>Ihr Auto ist alt, dreckig <br /> und der Lack ist matt?</h2>
 					</div>
-					<div class="col-lg-5 col-md-12 about-right">
-						<div class="section-title text-left">
-							<h2>Ihr Auto ist alt, dreckig  <br /> und der Lack ist matt?</h2>
-						</div>
 
 
 
-						<div>
-							<p>
-								Kein Problem! Schauen sie sich unsere Produkte an, indem sie über die Navigationsleiste oder durch das Drücken auf
-								 die obigen Bilder zu den Produkten gelangen.
-								<br> Durch die Produkte wird ihr Auto wieder in neuem Glanz erstrahlen,
-									wie ein echter Neuwagen!
-							</p>
-						</div>
+					<div>
+						<p>
+							Kein Problem! Schauen sie sich unsere Produkte an, indem sie über die Navigationsleiste oder durch das Drücken auf
+							die obigen Bilder zu den Produkten gelangen.
+							<br> Durch die Produkte wird ihr Auto wieder in neuem Glanz erstrahlen,
+							wie ein echter Neuwagen!
+						</p>
 					</div>
 				</div>
 			</div>
-		</section>
-
-				<!-- footer -->
-	<div class="footer-basic">
-			<footer>
-				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-			</footer>
 		</div>
-	</body>
+	</section>
+
+	<!-- footer -->
+	<div class="footer-basic">
+		<footer>
+			<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
+		</footer>
+	</div>
+
+	<script>
+
+			$(document).ready(function() {
+
+				//AJAX for the navbar----------------------------------------------------------------------------------------------------------------
+				$.ajax({
+					url: "http://localhost:8000/api/produktkategorie/alle",
+					method: "get",
+					dataType: "json"
+				}).done(function(response) {
+					//console.log(response.daten[0].name);
+
+					var tmp = '';
+					tmp += '<ul>';
+					tmp += '<li><a class="navi" href="start.html">Startseite</a></li>';
+
+					for (i = 0; i < response.daten.length; i++) {
+						tmp += '<li><a class="navi" href="produktliste.html?kategorie=' + response.daten[i].id + '">' + response.daten[i].bezeichnung + '</a>';
+						tmp += '</li>';
+					}
+
+					tmp += '<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li></ul>';
+
+
+					$('#Kategorieliste').html(tmp);
+				}).fail(function(jqXHR, statusText, error) {
+					console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+					alert("Ein Fehler ist aufgetreten");
+				});
+
+			});
+	</script>
+
+
+
+
+</body>
+
 </html>
